# algomancy

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASE_CHECKLIST.md  algomancy-version-bump.py  changelog.md  decorator_examples.py  exampleetlfactory.py  main-example.py  main.py  pyproject.toml
.github/scripts/: check_pypi_versions.py
.github/workflows/: publish.yml  pytest.yml  release_checklist.yml  version_check.yml
Pipelines/: algomancy-CD.yml  algomancy-CI.yml
algomancy/: __init__.py  appconfiguration.py  contentregistry.py  launcher.py  settingsmanager.py  stylingconfigurator.py
algomancy/components/: __init__.py  componentids.py  cqmloader.py  defaultloader.py  layout.py  layouthelpers.py
algomancy/components/admin_page/: admin.py  callbacks.py  sessions.py
algomancy/components/compare_page/: callbacks.py  compare.py  kpicard.py  scenarioselector.py
algomancy/components/data_page/: data.py  datamanagementdeletemodal.py  datamanagementderivemodal.py  datamanagementdownloadmodal.py  datamanagementimportmodal.py  datamanagementsavemodal.py  datamanagementtopbar.py  datamanagementuploadmodal.py  dialogcallbacks.py
algomancy/components/home_page/: home.py
algomancy/components/insights_page/: insights.py
algomancy/components/overview_page/: overview.py
algomancy/components/performance_page/: callbacks.py  kpicard.py  performance.py  scenarioselector.py
algomancy/components/scenario_page/: callbacks.py  delete_confirmation.py  new_scenario_creator.py  new_scenario_parameters_window.py  scenario_badge.py  scenario_cards.py  scenarios.py
algomancy/contentcreatorlibrary/: __init__.py  exampledatapage.py  librarymanager.py  placeholderalgorithmtemplate.py  placeholdercomparepage.py  placeholderdatapage.py  placeholderetlfactory.py  placeholderhomepagecontentcreator.py  placeholderkpitemplate.py  placeholderperformancepage.py  placeholderscenariopage.py  standarddatapage.py  standardhomepage.py  standardinsightspage.py  standardoverviewpage.py  stubconfiguration.py
algomancy/dashboardlogger/: __init__.py  logger.py
algomancy/dataengine/: __init__.py  datamanager.py  dataslicer.py  datasource.py  etl.py  extractor.py  file.py  inputfileconfiguration.py  loader.py  validator.py
algomancy/scenarioengine/: __init__.py  algorithmfactory.py  algorithmparameters.py  algorithmtemplate.py  basealgorithm.py  basealgorithmparameters.py  enumtypes.py  keyperformanceindicator.py  kpifactory.py  progresstracker.py  result.py  scenario.py  scenariofactory.py  scenariomanager.py  scenarioprocessor.py  scenarioregistry.py  unit.py
algomancy/sessionengine/: sessionmanager.py
assets/: style.css
assets/css/: button_colors.css  sidebar_layout.css  theme_colors.css
docs/source/: changelog.md  conf.py  index.md  migration.md
docs/source/fundamentals/: ETL.md  algorithms.md  architecture.md  concepts.md  data.md  extending.md  front_end.md  frontends.md  fundamentals.md  result.md  sessions.md
docs/source/getting_started/: installation.md  quickstart.md
docs/source/reference/: api.md  cli.md  content.md  data.md  gui.md  reference.md  scenario.md  utils.md
docs/source/tutorial/: algorithms.md  etl.md  kpi.md  pages.md  results.md  tutorial.md
documentation/: 0_introduction.md  1_data.md  2_data.md  2_templates.md  3_algorithms.md  4_implementation.md
example/: IDs.py  main.py
example/assets/: style.css
example/data/default_session/: serialized_data.json
example/data/main/: meta.json
example/data_handling/: __init__.py  factories.py  input_configs.py  results.py  schemas.py  warehouse_data_source.py
example/default_session_backup/: meta.json
example/pages/: DataPageContent.py  HomePageContent.py  OverviewPageContentCreator.py  PerformancePageContent.py  ScenarioPageContent.py  allocation_compare_page.py  exampledatapage.py  warehouse_home_page.py  warehouse_overview_page.py
example/templates/: __init__.py
example/templates/algorithm/: __init__.py  asisalgorithm.py  batchingalgorithm.py  edge_failure_modes.py  edge_instant.py  edge_parameter_matrix.py  edge_progress_long.py  randomalgorithm.py  slowalgorithm.py  warehouse_slotting.py
example/templates/kpi/: DelayKPITemplate.py  ErrorKPITemplate.py  ThroughputKPITemplate.py  UtilizationKPITemplate.py  __init__.py  edge_kpis.py  warehouse_kpis.py
example/templates/scenarios/: __init__.py  create_example_scenarios.py
example_implementation/: IDs.py
example_implementation/data_handling/: factories.py  input_configs.py
example_implementation/pages/: DataPageContent.py  HomePageContent.py  OverviewPageContentCreator.py  PerformancePageContent.py  ScenarioPageContent.py
example_implementation/templates/: __init__.py
example_implementation/templates/algorithm/: AsIsAlgorithmTemplate.py  BatchingAlgorithmTemplate.py  RandomAlgorithmTemplate.py  SlowSampleAlgorithmTemplate.py  __init__.py  asisalgorithm.py  batchingalgorithm.py  randomalgorithm.py  slowalgorithm.py
example_implementation/templates/kpi/: DelayKPITemplate.py  ErrorKPITemplate.py  ThroughputKPITemplate.py  UtilizationKPITemplate.py  __init__.py
example_implementation/templates/scenarios/: create_example_scenarios.py
scripts/: migrate_m14_session_ids.py
src/algomancy/: __init__.py  appconfiguration.py  contentregistry.py  gui_launcher.py  launcher.py  settingsmanager.py  stylingconfigurator.py  test_docs.py
tests/: conftest.py  fixtures.py  test_data_loading.py  test_data_management.py  test_edge_case_m9.py  test_launcher.py  test_multi_interface_m10.py  test_scenarios.py  test_unit_measurement_examples.py  test_warehouse_m8.py
tests/data/example_data/: multisheet.xlsx
tests/smoke/: test_persistence_matrix.py
tutorial/: README.md  main.py  pyproject.toml
tutorial/assets/css/: cqm_loader.css  theme_colors.css
tutorial/data/master/: dc.xlsx  otherlocations.xlsx  stores.csv
tutorial/src/pages/: components.py  (+3 more)
(+68 files in other folders)
