[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.22,<0.10.0"]

[project]
authors = [
  {email = "pepijn.wissing@cqm.nl", name = "Pepijn Wissing"},
  {email = "bart.post@cqm.nl", name = "Bart Post"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
dependencies = [
  "algomancy-cli >= 0.1.2",
  "algomancy-content>= 0.1.2",
  "algomancy-data>= 0.1.2",
  "algomancy-gui>= 0.1.2",
  "algomancy-scenario>= 0.1.2",
  "algomancy-utils>= 0.1.2",
  "pytest>=8.4.2",
  "ruff>=0.13.1",
  "strenum>=0.4.15"
]
description = "A dashboarding framework for visualizing performances of algorithms or simulations in various scenarios."
keywords = ["visualization", "algorithm", "simulation", "scenario"]
license-files = ["LICENSE*"]
maintainers = [
  {email = "pepijn.wissing@cqm.nl", name = "Pepijn Wissing"},
  {email = "bart.post@cqm.nl", name = "Bart Post"}
]
name = "Algomancy"
readme = "README.md"
requires-python = ">=3.14"
version = "0.3.8"

[project.scripts]
algomancy-cli = "algomancy_cli.main:main"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv.sources]
algomancy-cli = {workspace = true}
algomancy-content = {workspace = true}
algomancy-data = {workspace = true}
algomancy-gui = {workspace = true}
algomancy-scenario = {workspace = true}
algomancy-utils = {workspace = true}

[tool.uv.workspace]
members = [
  "packages/algomancy-content",
  "packages/algomancy-gui",
  "packages/algomancy-utils",
  "packages/algomancy-data",
  "packages/algomancy-scenario",
  "packages/algomancy-cli"
]
