[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.22,<0.10.0"]

[project]
authors = [
  {email = "pepijn.wissing@cqm.nl", name = "Pepijn Wissing"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
dependencies = [
  "algomancy-cli >= 0.4.1",
  "algomancy-content >= 0.4.1",
  "algomancy-data >= 0.4.1",
  "algomancy-gui >= 0.4.1",
  "algomancy-scenario >= 0.4.1",
  "algomancy-utils >= 0.4.1",
  "furo>=2025.12.19",
  "myst-parser>=5.0.0",
  "pydata-sphinx-theme>=0.16.1",
  "sphinx>=9.1.0",
  "sphinx-autobuild>=2025.8.25",
  "sphinx-autodoc2>=0.5.0",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.7.0",
  "sphinx-rtd-theme>=3.1.0"
]
description = "A dashboarding framework for visualizing performances of algorithms or simulations in various scenarios."
keywords = ["visualization", "algorithm", "simulation", "scenario"]
license-files = ["LICENSE"]
maintainers = [
  {email = "pepijn.wissing@cqm.nl", name = "Pepijn Wissing"},
  {email = "bart.post@cqm.nl", name = "Bart Post"}
]
name = "Algomancy"
readme = "README.md"
requires-python = ">=3.14"
version = "0.4.1"

[project.scripts]
algomancy-cli = "algomancy_cli.main:main"

[project.urls]
Documentation = "https://algomancy.readthedocs.io/en/latest/"
Repository = "https://github.com/PepijnWissing/algomancy"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv.sources]
algomancy-cli = {workspace = true}
algomancy-content = {workspace = true}
algomancy-data = {workspace = true}
algomancy-gui = {workspace = true}
algomancy-scenario = {workspace = true}
algomancy-utils = {workspace = true}

[tool.uv.workspace]
members = [
  "packages/algomancy-content",
  "packages/algomancy-gui",
  "packages/algomancy-utils",
  "packages/algomancy-data",
  "packages/algomancy-scenario",
  "packages/algomancy-cli"
]
