[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.22,<0.10.0"]

[dependency-groups]
dev = [
  "httpx>=0.28",
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0"
]

[project]
authors = [
  {email = "pepijn.wissing@cqm.nl", name = "Pepijn Wissing"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
dependencies = [
  "algomancy-api >= 0.8.6",
  "algomancy-content >= 0.8.6",
  "algomancy-data >= 0.8.6",
  "algomancy-gui >= 0.8.6",
  "algomancy-scenario >= 0.8.6",
  "algomancy-utils >= 0.8.6",
  "algomancy-quickstart >= 0.8.6",
  "furo>=2025.12.19",
  "ipykernel>=7.2.0",
  "myst-parser>=5.0.0",
  "pydata-sphinx-theme>=0.16.1",
  "sphinx>=9.1.0",
  "sphinx-autobuild>=2025.8.25",
  "sphinx-autodoc2>=0.5.0",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.7.0",
  "sphinx-rtd-theme>=3.1.0",
  "sphinxcontrib-mermaid>=2.0.0"
]
description = "A dashboarding framework for visualizing performances of algorithms or simulations in various scenarios."
keywords = ["visualization", "algorithm", "simulation", "scenario"]
license-files = ["LICENSE"]
maintainers = [
  {email = "pepijn.wissing@cqm.nl", name = "Pepijn Wissing"},
  {email = "bart.post@cqm.nl", name = "Bart Post"}
]
name = "Algomancy"
readme = "README.md"
requires-python = ">=3.14"
version = "0.8.6"

[project.optional-dependencies]
database = [
  "algomancy-scenario[database]"
]

[project.scripts]
algomancy-quickstart = "algomancy_quickstart.main:main"

[project.urls]
Documentation = "https://algomancy.readthedocs.io/en/latest/"
Repository = "https://github.com/PepijnWissing/algomancy"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "gui: marks tests that require a running GUI and Playwright (deselect with '-m \"not gui\"')"
]
pythonpath = ["."]

[tool.uv.sources]
algomancy-api = {workspace = true}
algomancy-content = {workspace = true}
algomancy-data = {workspace = true}
algomancy-gui = {workspace = true}
algomancy-quickstart = {workspace = true}
algomancy-scenario = {workspace = true}
algomancy-utils = {workspace = true}

[tool.uv.workspace]
members = [
  "packages/algomancy-api",
  "packages/algomancy-content",
  "packages/algomancy-gui",
  "packages/algomancy-utils",
  "packages/algomancy-data",
  "packages/algomancy-scenario",
  "packages/algomancy-quickstart"
]
